--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Jotlash_GPubs</string>
+    <string name="error_data_message">Error Loading Data From Google Books</string>
+    <string name="search">search</string>
+    <string name="no_search_data">Please insert valid search query</string>
+
+    <string name="hint_title">Insert Title</string>
+    <string name="hint_author">Insert Author(s)</string>
+    <string name="hint_publisher">Insert Publisher</string>
+    <string name="hint_ISBN">Insert ISBN</string>
+    <string name="advanced_search">Advanced Search</string>
 </resources>
